--- a/public/calendar/github.html
+++ b/public/calendar/github.html
@@ -7,10 +7,15 @@
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
     <title>Document</title>
     <style>
-        #includefooter{
-            height:1000px;
+        #includefooter {
+            height: 1000px;
             width: 1000px;
         }
+        *::selection {
+            color: white;
+            background-color: #96f2d7;
+        }
+
     </style>
 </head>
 <body>
@@ -20,38 +25,39 @@
 <script>
     function clientSideInclude(id, url) {
         var req = false;
-        if(window.XMLHttpRequest) {// Safari, Firefox, 及其他非微软浏览器
+        if (window.XMLHttpRequest) {// Safari, Firefox, 及其他非微软浏览器
             try {
                 req = new XMLHttpRequest();
-            }catch(e) {
+            } catch (e) {
                 req = false;
             }
-        }else if(window.ActiveXObject) {
+        } else if (window.ActiveXObject) {
             try {
                 req = new ActiveXObject("Msxml2.XMLHTTP");// For Internet Explorer on Windows
-            } catch(e) {
-                try{
-                    req= new ActiveXObject("Microsoft.XMLHTTP");
-                } catch(e) {
+            } catch (e) {
+                try {
+                    req = new ActiveXObject("Microsoft.XMLHTTP");
+                } catch (e) {
                     req = false;
                 }
             }
         }
         var element = document.getElementById(id);
-        if(!element) {
-            alert("函数clientSideInclude无法找到id " + id + "," +"你的网页中必须有一个含有这个id的div 或 span 标签。");
+        if (!element) {
+            alert("函数clientSideInclude无法找到id " + id + "," + "你的网页中必须有一个含有这个id的div 或 span 标签。");
             return;
         }
-        if(req) {
+        if (req) {
             req.open('GET', url, false);// 同步请求，等待收到全部内容
             req.send(null);
             element.innerHTML = req.responseText;
         } else {
             element.innerHTML =
-                "对不起，你的浏览器不支持" +"XMLHTTPRequest 对象。这个网页的显示要求" +
-                "Internet Explorer 5 以上版本, " +"或 Firefox 或 Safari 浏览器，也可能会有其他可兼容的浏览器存在。";
+                "对不起，你的浏览器不支持" + "XMLHTTPRequest 对象。这个网页的显示要求" +
+                "Internet Explorer 5 以上版本, " + "或 Firefox 或 Safari 浏览器，也可能会有其他可兼容的浏览器存在。";
         }
     }
+
     clientSideInclude('includefooter', 'https://ghchart.rshah.org/ikunQAQ')
 </script>
 </body>
