--- a/public/calendar/leetcode.html
+++ b/public/calendar/leetcode.html
@@ -3,11 +3,14 @@
 <head>
     <meta charset="utf-8">
 
-
     <title>Hexo</title>
     <style>
         *{
             font-size:16px !important;;
+        }
+        *::selection {
+            color: white;
+            background-color: #96f2d7;
         }
         #container {
             height: fit-content !important;
